--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--DIV CONTENEDOR 1-->>
     <div class="container">
         <div class="row">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, natus!</p>
+            <p>Hello World!!</p>
         </div>
     </div>
     
